# langchain_app

./: Messages.py  README.md  conditional_chain.py  fewshotsprompttemplate.py  main.py  parallel_chain.py  pyproject.toml  template2.py  templates.py  travel_planner.py
C8/: chatprompttemplate.py  chromedb_app.py  embeddingapp.py
C8/chroma_storage/: chroma.sqlite3
