[project]
name = "class7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devenv>=0.1.1",
    "langchain>=1.3.14",
    "langchain-openrouter>=0.2.6",
    "py>=1.11.0",
    "python-dotenv>=1.2.2",
    "python-env>=1.0.0",
    "streamlit>=1.60.0",
]
